--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
             <h3>¿Listo para digitalizar tu idea?</h3>
             <p>Hablemos sobre cómo puedo ayudar a tu negocio en Santiago. ¡Te responderé en menos de 24 horas!</p>
             
-            <form name="contactoV2" method="POST" netlify action="/gracias.html" class="contact-form">
-                
+            <form name="contactoV2" method="POST" netlify action="gracias.html" class="contact-form">
+
+                <input type="hidden" name="form-name" value="contactoV2">
                 <label for="nombre">Nombre del Cliente / Negocio</label>
                 <input type="text" id="nombre" name="nombre" required>
 
